Fix button alignment

--- a/src/ui/form.styl
+++ b/src/ui/form.styl
@@ -14,7 +14,6 @@ tw-button-default() {
   max-width: 100%;
   // cursor: pointer;
   pointer-events: initial;
-  vertical-align: middle;
 
   * > {
     display: inline-flex;
